# session_type_test

./: Cargo.toml  LICENSE.md
examples/: .mqtt.rs.swp  arithmetic.rs  atm.rs  connect.rs  echo-server.rs  generic.rs  hselect.rs  many-clients.rs  mqtt.rs  planeclip.rs  simple_protocol_check.rs  try-offer.rs
src/: .lib.rs.swp  .mpst_improved.rs.swp  lib.rs  mpst.rs  mpst_improved.rs
src/mpst/: parser.rs  projection.rs
tests/: chan_select.rs  drop_server.rs  mpst.rs  parser_test.rs  projection_test.rs  send_recv.rs  try_recv.rs
tests/compile-fail/: cannot-impl-hasdual.rs  incompatible-sessions.rs  no-aliasing.rs  send-on-recv.rs
