[package]
name = "session_types_extension"
version = "0.3.1"
authors = [ "Nicolas Lagaillardie <lagaillardie.nicolas@live.fr>"]

description = "An implementation of session types in Rust"

license = "MIT"

[dependencies]
crossbeam-channel = "0.3.3"
nom = "3.2"

[dev-dependencies]
compiletest_rs = { version = "0.3.16", features = ["stable"] }
rand = "0.5.5"
